--- a/app/src/main/res/layout/activity_fixture_view.xml
+++ b/app/src/main/res/layout/activity_fixture_view.xml
@@ -4,11 +4,13 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-    tools:context="com.example.rockeypandit.ipl2018.FixtureView">
+    tools:context="com.example.rockeypandit.ipl2018.FixtureView"
+    android:background="@drawable/bkt">
 
-<android.support.v7.widget.RecyclerView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/recyclerView"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+       />
 
 </android.support.constraint.ConstraintLayout>
