--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,6 +4,93 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.rockeypandit.ipl2018.Home">
+    tools:context="com.example.rockeypandit.ipl2018.Home"
+    android:background="@drawable/bkt">
+
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
+
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:layout_marginTop="45dp"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <LinearLayout
+        android:id="@+id/sliderDots"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/viewPager"
+
+
+        android:layout_marginTop="20dp"
+
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="horizontal"
+
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewPager">
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:orientation="vertical"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintTop_toBottomOf="@id/sliderDots">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="18dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:gravity="center_horizontal"
+            android:onClick="fixtureCall"
+            android:text="FIXTURES"
+            android:textSize="20dp"
+            android:background="@drawable/btncorner"
+            android:layout_marginBottom="5dp"
+            android:textAlignment="center" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_marginBottom="5dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:gravity="center_horizontal"
+            android:onClick="teamsCall"
+            android:padding="18dp"
+            android:text="TEAMS"
+            android:textSize="20dp"
+            android:background="@drawable/btncorner"
+
+            android:textAlignment="center" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:background="@drawable/btncorner"
+            android:layout_marginBottom="5dp"
+            android:textSize="20dp"
+            android:padding="18dp"
+            android:gravity="center_horizontal"
+            android:onClick="pointsCall"
+            android:text="POINTS TABLE"
+            android:textAlignment="center" />
+
+
+
+
+    </LinearLayout>
+
 
 </android.support.constraint.ConstraintLayout>
