--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,29 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bckground"
+    android:background="@drawable/bckf"
+
+
     android:theme="@style/AppTheme.NoActionBar"
-
-
     tools:context="com.example.rockeypandit.ipl2018.MainActivity">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="169dp"
-        android:layout_height="173dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/iplscreen"
+        android:id="@+id/imglogo"
+        android:layout_width="0dp"
+        android:layout_height="316dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="40dp"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.638"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/iplscreen" />
+        app:layout_constraintVertical_bias="0.084"
+        app:srcCompat="@drawable/lfo" />
 </android.support.constraint.ConstraintLayout>
