--- a/app/src/main/res/layout/activity_teams.xml
+++ b/app/src/main/res/layout/activity_teams.xml
@@ -1,67 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android" >
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@drawable/bkt">
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TEAMS"
+        android:textSize="40sp"
+        android:gravity="center_horizontal"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
+        android:textColor="#25f"
+        android:fontFamily="sans-serif"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="4">
 
 
-         <android.support.v7.widget.CardView
-            android:id="@+id/card_view"
+        <android.support.v7.widget.CardView
+            android:id="@+id/card1"
             android:layout_width="170dp"
             android:layout_height="250dp"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:elevation="3dp"
-            card_view:cardCornerRadius="5dp">
+            android:layout_weight="2"
+            android:elevation="8dp"
+            android:onClick="chennaiInfo"
+            card_view:cardCornerRadius="7dp"
+            card_view:cardElevation="15dp">
 
-             <RelativeLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:id="@+id/overflow"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-
-                    android:scaleType="centerCrop"
+                    android:alpha="1.9"
+                    android:scaleType="fitXY"
                     android:src="@drawable/edtchennai" />
             </RelativeLayout>
-         </android.support.v7.widget.CardView>
-
-
-
-
+        </android.support.v7.widget.CardView>
 
 
         <android.support.v7.widget.CardView
-        android:id="@+id/card_view1"
-        android:layout_width="170dp"
-        android:layout_height="250dp"
-        android:layout_gravity="center"
-        android:layout_margin="10dp"
-        android:elevation="3dp"
-        card_view:cardCornerRadius="5dp">
+            android:id="@+id/card2"
+            android:layout_width="170dp"
+            android:layout_height="250dp"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:layout_weight="2"
+            android:elevation="8dp"
+            android:onClick="bangaloreInfo"
+            card_view:cardCornerRadius="7dp"
+            card_view:cardElevation="15dp">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/overflow1"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitXY"
-                android:src="@drawable/edtbangalore" />
-        </RelativeLayout>
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/edtbangalore" />
+            </RelativeLayout>
 
         </android.support.v7.widget.CardView>
 
@@ -73,41 +86,21 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-
-
-    <android.support.v7.widget.CardView
-        android:layout_width="170dp"
-        android:layout_height="250dp"
-        android:layout_gravity="center"
-        android:layout_margin="10dp"
-        android:elevation="3dp"
-        card_view:cardCornerRadius="5dp">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-
-                android:scaleType="centerCrop"
-                android:src="@drawable/edtchennai" />
-
-        </RelativeLayout>
-
-    </android.support.v7.widget.CardView>
+        android:orientation="horizontal"
+        android:weightSum="4">
 
 
         <android.support.v7.widget.CardView
+            android:id="@+id/card3"
             android:layout_width="170dp"
             android:layout_height="250dp"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:elevation="3dp"
-            card_view:cardCornerRadius="5dp">
+            android:layout_weight="2"
+            android:elevation="8dp"
+            android:onClick="delhiInfo"
+            card_view:cardCornerRadius="7dp"
+            card_view:cardElevation="15dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -116,30 +109,56 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/edtdelhi" />
+            </RelativeLayout>
+        </android.support.v7.widget.CardView>
 
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/edtchennai" />
 
+        <android.support.v7.widget.CardView
+            android:id="@+id/card4"
+            android:layout_width="170dp"
+            android:layout_height="250dp"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:layout_weight="2"
+            android:elevation="8dp"
+            android:onClick="hyderabadInfo"
+            card_view:cardCornerRadius="7dp"
+            card_view:cardElevation="15dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/edthyd" />
             </RelativeLayout>
 
         </android.support.v7.widget.CardView>
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
+        android:orientation="horizontal"
+        android:weightSum="4">
 
 
         <android.support.v7.widget.CardView
+            android:id="@+id/card5"
             android:layout_width="170dp"
             android:layout_height="250dp"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:elevation="3dp"
-            card_view:cardCornerRadius="5dp">
+            android:layout_weight="2"
+            android:elevation="8dp"
+            android:onClick="kolkataInfo"
+            card_view:cardCornerRadius="7dp"
+            card_view:cardElevation="15dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -149,21 +168,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
 
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/edtchennai" />
-
+                    android:scaleType="fitXY"
+                    android:src="@drawable/edtkolkata" />
             </RelativeLayout>
-
         </android.support.v7.widget.CardView>
 
 
         <android.support.v7.widget.CardView
+            android:id="@+id/card6"
             android:layout_width="170dp"
             android:layout_height="250dp"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:elevation="3dp"
-            card_view:cardCornerRadius="5dp">
+            android:layout_weight="2"
+            android:elevation="8dp"
+            android:onClick="mumbaiInfo"
+            card_view:cardCornerRadius="7dp"
+            card_view:cardElevation="15dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -172,72 +193,72 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/edtchennai" />
-
+                    android:scaleType="fitXY"
+                    android:src="@drawable/edtmumbai" />
             </RelativeLayout>
 
         </android.support.v7.widget.CardView>
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
+        android:orientation="horizontal"
+        android:weightSum="4">
 
 
         <android.support.v7.widget.CardView
-            android:id="@+id/card_view2"
+            android:id="@+id/card7"
             android:layout_width="170dp"
             android:layout_height="250dp"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:elevation="3dp"
-            card_view:cardCornerRadius="5dp">
+            android:layout_weight="2"
+            android:elevation="8dp"
+            android:onClick="punjabInfo"
+            card_view:cardCornerRadius="7dp"
+            card_view:cardElevation="15dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:id="@+id/overflow2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/edtchennai" />
-
+                    android:scaleType="fitXY"
+                    android:src="@drawable/edtpunjab" />
             </RelativeLayout>
-
         </android.support.v7.widget.CardView>
 
-
         <android.support.v7.widget.CardView
-            android:id="@+id/card_view4"
+            android:id="@+id/card8"
             android:layout_width="170dp"
             android:layout_height="250dp"
             android:layout_gravity="center"
             android:layout_margin="10dp"
-            android:elevation="3dp"
-            card_view:cardCornerRadius="5dp">
+            android:layout_weight="2"
+            android:elevation="8dp"
+            android:onClick="rajasthanInfo"
+            card_view:cardCornerRadius="7dp"
+            card_view:cardElevation="15dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:id="@+id/overflow4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/edtchennai" />
+                    android:scaleType="fitXY"
+                    android:src="@drawable/edtrajasthan" />
 
             </RelativeLayout>
 
         </android.support.v7.widget.CardView>
+
     </LinearLayout>
+
 
 </LinearLayout>
 
