--- a/app/src/main/res/layout/cardview.xml
+++ b/app/src/main/res/layout/cardview.xml
@@ -85,24 +85,24 @@
                 style="@style/TextAppearance.AppCompat.Title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="-15dp"
                 android:layout_marginTop="2dp"
                 android:layout_weight="1"
                 android:ellipsize="end"
-                android:layout_gravity="center"
+                android:gravity="center"
                 android:maxLines="1"
-                android:text="kkr"
-                android:layout_marginLeft="5dp"/>
+                android:text="kkr" />
 
             <TextView
                 android:id="@+id/date"
                 style="@style/TextAppearance.AppCompat.Title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="2dp"
                 android:layout_weight="1"
                 android:ellipsize="end"
+                android:gravity="center"
                 android:maxLines="1"
                 android:text="8april" />
 
@@ -111,11 +111,11 @@
                 style="@style/TextAppearance.AppCompat.Title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="2dp"
                 android:layout_weight="1"
                 android:ellipsize="end"
+                android:gravity="center"
                 android:maxLines="1"
                 android:text="srh" />
         </LinearLayout>
