--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,5 +24,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.084"
-        app:srcCompat="@drawable/lfo" />
+        app:srcCompat="@drawable/lfo"
+        />
 </android.support.constraint.ConstraintLayout>
