--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -57,7 +57,15 @@
             android:background="@drawable/btncorner"
             android:layout_marginBottom="5dp"
             android:textAlignment="center" />
-
+<!--
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/test"
+            android:layout_width="500dp"
+            android:layout_height="200dp"
+            app:lottie_rawRes="@raw/test"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"/>
+-->
         <Button
             android:layout_width="match_parent"
             android:layout_marginBottom="5dp"
