--- a/app/src/main/res/layout/activity_team_info.xml
+++ b/app/src/main/res/layout/activity_team_info.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/coordinator"
     tools:context="com.example.rockeypandit.ipl2018.TeamInfo"
     android:background="#fcfcfc">
 
@@ -12,6 +13,7 @@
         android:layout_height="300dp"
         android:id="@+id/appbar"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+
         >
 
         <android.support.design.widget.CollapsingToolbarLayout
@@ -19,16 +21,36 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_scrollFlags="exitUntilCollapsed|scroll"
+            app:titleEnabled="true"
             app:title="TEAM SQUAD"
-            android:theme="@style/Theme.Design.Light.NoActionBar"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark"
             app:contentScrim="@color/colorPrimaryDark">
+        <!--  android:theme="@style/Theme.Design.Light.NoActionBar"-->
+
+
             <ImageView
-                android:id="@+id/teamInfoLogo"
+                android:id="@+id/teamInfLogo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/edtchennai"
                 app:layout_collapseMode="parallax"
-                android:scaleType="centerCrop"/>
+                android:scaleType="centerCrop"
+                android:src="@drawable/edtchennai"/>
+
+
+
+
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin" >
+
+
+            </android.support.v7.widget.Toolbar>
+
+
+
 
 
         </android.support.design.widget.CollapsingToolbarLayout>
@@ -42,7 +64,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
 
-        android:layout_marginBottom="80dp">
+        android:layout_marginBottom="60dp">
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
@@ -53,9 +75,9 @@
             app:cardUseCompatPadding="true">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="horizontal"
-                android:weightSum="10">
+                android:weightSum="10" android:baselineAligned="false">
              <!--   <ImageView
                     android:layout_weight="9"
                     android:layout_width="match_parent"
