--- a/app/src/main/res/layout/activity_fixture_view.xml
+++ b/app/src/main/res/layout/activity_fixture_view.xml
@@ -5,12 +5,15 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
     tools:context="com.example.rockeypandit.ipl2018.FixtureView"
-    android:background="@drawable/bkt">
+    android:background="@drawable/bkt"
+    >
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-       />
+
+
+        />
 
 </android.support.constraint.ConstraintLayout>
