--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -43,7 +43,19 @@
         android:orientation="vertical"
         android:layout_marginBottom="15dp"
         app:layout_constraintTop_toBottomOf="@id/sliderDots">
-
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="18dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginRight="50dp"
+            android:gravity="center_horizontal"
+            android:onClick="live"
+            android:text="LIVE"
+            android:textSize="20dp"
+            android:background="@drawable/btncorner"
+            android:layout_marginBottom="5dp"
+            android:textAlignment="center" />
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
