--- a/app/src/main/res/layout/activity_teams.xml
+++ b/app/src/main/res/layout/activity_teams.xml
@@ -8,6 +8,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="15dp"
     android:orientation="vertical">
 
     <TextView
@@ -204,6 +205,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:paddingBottom="15dp"
         android:weightSum="4">
 
 
