--- a/app/src/main/res/layout/cardview.xml
+++ b/app/src/main/res/layout/cardview.xml
@@ -13,7 +13,9 @@
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:paddingTop="14dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/fx"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
