--- a/app/src/main/res/layout/home_live_tile.xml
+++ b/app/src/main/res/layout/home_live_tile.xml
@@ -6,38 +6,41 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:elevation="5dp"
         app:cardElevation="5dp">
 
-
+<!--
          <ImageView
             android:id="@+id/imageView2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="fitXY"
             app:srcCompat="@mipmap/ic_launcher" />
-
+-->
         <TextView
             android:id="@+id/timerText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#000"
-            android:textSize="22sp"
+            android:layout_gravity="center_horizontal|center_vertical"
             android:gravity="center_vertical|center_horizontal"
-            android:layout_gravity="center_horizontal|center_vertical" />
+            android:textColor="#000"
+            android:textSize="18sp"
+            android:layout_marginTop="-40dp"
+            android:textStyle="bold"/>
 
 
 
 
 
-        <!--
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="8dp"
             android:paddingTop="14dp"
+
             android:orientation="vertical">
 
             <LinearLayout
@@ -47,8 +50,8 @@
 
                 <ImageView
                     android:id="@+id/logo1"
-                    android:layout_width="18dp"
-                    android:layout_height="70dp"
+                    android:layout_width="20dp"
+                    android:layout_height="80dp"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
                     android:adjustViewBounds="true"
@@ -89,8 +92,8 @@
 
                 <ImageView
                     android:id="@+id/logo2"
-                    android:layout_width="18dp"
-                    android:layout_height="70dp"
+                    android:layout_width="20dp"
+                    android:layout_height="80dp"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
                     android:adjustViewBounds="true"
@@ -103,6 +106,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -110,24 +114,26 @@
                     style="@style/TextAppearance.AppCompat.Title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="-15dp"
                     android:layout_marginTop="2dp"
                     android:layout_weight="1"
                     android:ellipsize="end"
-                    android:layout_gravity="center"
+                    android:gravity="center"
                     android:maxLines="1"
-                    android:text="kkr"
-                    android:layout_marginLeft="5dp"/>
+                    android:text="kkr" />
 
                 <TextView
                     android:id="@+id/date"
                     style="@style/TextAppearance.AppCompat.Title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginLeft="-25dp"
+                    android:layout_marginRight="-35dp"
+
                     android:layout_marginTop="2dp"
                     android:layout_weight="1"
                     android:ellipsize="end"
+                    android:gravity="center"
                     android:maxLines="1"
                     android:text="8april" />
 
@@ -136,19 +142,26 @@
                     style="@style/TextAppearance.AppCompat.Title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="2dp"
                     android:layout_weight="1"
                     android:ellipsize="end"
+                    android:gravity="center"
                     android:maxLines="1"
                     android:text="srh" />
             </LinearLayout>
-
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textColor="#ed4e1e"
+                android:gravity="center"
+                android:layout_marginTop="5dp"
+                android:text=""/>
 
         </LinearLayout>
 
-        -->
+
 
     </android.support.v7.widget.CardView>
 
